# stm32wba-ble

./: .gitignore  .gitmodules  Cargo.toml  README.md  STM32_WPAN
.cargo/: config.toml
.github/workflows/: ci.yaml
st_wba_ble/: Cargo.toml
st_wba_ble/examples/: minimal.rs
st_wba_ble/src/: adv.rs  c_shims.rs  evt.rs  gatt.rs  lib.rs  status.rs
st_wba_ble_sys/: Cargo.toml  build.rs
st_wba_ble_sys/shims/: bindgen_fix.h
st_wba_ble_sys/src/: lib.rs
